# scpc

./: .gitignore  .gitmodules  README.md  environment.yaml  environment.yml  main.py  models.py  modules.py  pyproject.toml  requirements.txt  run.sh  setup.cfg
conf/: aws-4gpu-spot-fleet-config.json  aws-cpu-launch-template.json  aws-cpu-spot-fleet-config.json  aws-cpu-spot-fleet-config.template.json  aws-gpu-launch-template.json  aws-gpu-spot-fleet-config.json  aws-run-policy.json  aws-spot-fleet-config-leaf.template.json  aws-spot-fleet-config.template.json  aws-user-data.template.mime  aws.create-fleet.template.json  baseline.2kshort-training.template.yaml  baseline.data.template.yaml  baseline.model.template.yaml  baseline.training.template.yaml  cc-base-requirements.txt  data.libri.fbank.yaml  data.libri.raw.yaml  data.libri.raw_100.yaml  fbank-80-feats.json  feats.fbank-80.args.txt  feats.fbank.args.txt  feats.raw.args.txt  meta.template.yaml  model.bestrq.csa.yaml  model.bestrq.csa128.yaml  model.bestrq.csa16.yaml  model.bestrq.csa2.yaml  model.bestrq.csa32.yaml  model.bestrq.csa4.yaml  model.bestrq.csa64.yaml  model.bestrq.csa8.yaml  model.bestrq.small.yaml  model.bestrq.trans.yaml  model.bestrq.trans16.yaml  model.bestrq.trans2.yaml  model.bestrq.trans32.yaml  model.bestrq.trans4.yaml  model.bestrq.trans64.yaml  model.bestrq.trans8.yaml  (+55 more)
resources/: README  libri_to_abxLS.map  train_clean_100_test_subset.txt  train_clean_100_train_subset.txt
scripts/: analyze.ipynb  archive_version.sh  aws_env.sh  aws_init.sh  aws_run.sh  aws_run_internal.sh  aws_run_internal.template.sh  aws_sync.sh  baseline_run.sh  cc_env.sh  cc_run.sh  cc_zrc_run.sh  construct_config_grid.sh  delete_useless_checkpoints.sh  exp_utils.py  grid.sh  inference.sh  install_kenlm.sh  preamble.sh  slurm_run_fit.sh  superb_run.sh  update_param_list_in_model_yaml.sh  utils.sh  vector_env.sh  vector_run.sh  zrc_run.sh
src/scpc/: __init__.py  a2r.py  cli.py  expert.py  info.py  models.py  modules.py  pca.py  train.py
tests/: test_modules.py
