[metadata]
name = scpc
description = "Experimenting with smaller windows in CPC acoustic modelling"
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files =
  LICENSE
  LICENSE_cpc_audio
url = https://github.com/sdrobert/scpc
author = Sean Robertson
author_email = sdrobert@cs.toronto.edu
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3

[options]
packages = scpc
package_dir =
  = src
python_requires = >= 3.8
install_requires =
  pytorch-lightning
  pydrobert-param[yaml]>=0.4.0
  pydrobert-pytorch
  pydrobert-speech
  rich
  torch>=1.10

[options.entry_points]
console_scripts =
  scpc = scpc.cli:main

[options.extras_require]
s3plr =
  s3prl
zrc =
  zerospeech-benchmarks
  zerospeech-libriabx
  zerospeech-libriabx2
all =
  s3prl
  zerospeech-benchmarks
  zerospeech-libriabx
  zerospeech-libriabx2
