[metadata]
name = scpc
description = "Experimenting with smaller windows in CPC acoustic modelling"
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files =
  LICENSE
  LICENSE_cpc_audio
url = https://github.com/sdrobert/scpc
author = Sean Robertson
author_email = sdrobert@cs.toronto.edu
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3

[options]
packages = scpc
package_dir =
  = src
python_requires = >= 3.8
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
  scpc-train = scpc.train:main [train]
  scpc-inference = scpc.expert:main

[options.extras_require]
all = file: conf/train-requirements.txt, conf/zrc-requirements.txt
train = file: conf/train-requirements.txt
zrc = file: conf/zrc-requirements.txt
